[#13565] add requiredProperties to ObjectPropertyFormatter
This will be used to store required ObjectPropertyDescriptor references.

--- a/api-domain/src/main/resources/descriptors/object-api.yaml
+++ b/api-domain/src/main/resources/descriptors/object-api.yaml
@@ -749,7 +749,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ObjectPropertyFormatterParameter'
-
+        requiredProperties:
+          description: Properties (referenced as ObjectPropertyDescriptor) which are needed to be present to run this formatter.
+          type: array
+          items:
+            type: string
+            format: uri
     ObjectPropertyFormatterParameter:
       description: |
         This setting information to resolve a necessary parameters for the message format.
