[#13911] ACLObject for save acls

--- a/api-domain/src/main/resources/descriptors/org-api.yaml
+++ b/api-domain/src/main/resources/descriptors/org-api.yaml
@@ -352,8 +352,14 @@ components:
           $ref: '#/components/schemas/User'
         operation:
           $ref: '#/components/schemas/BulkUpdateOperation'
-          
-
+    ACLObject:
+      type: object
+      properties:    
+        uri: 
+          type: string
+          format: uri
+        acl:
+          $ref: '#/components/schemas/ACL'
     ACL:
       type: object
       description: |
