[#13292] admin approval workflow now works, if MDMApprovalApi present

--- a/api-domain/src/main/resources/descriptors/mdm-api.yaml
+++ b/api-domain/src/main/resources/descriptors/mdm-api.yaml
@@ -206,7 +206,7 @@ components:
           format: uri
         created:
           type: UserActivityLog
-        notifyUri:
+        approver:
           type: string
           format: uri
         
