[#13472] add SEPERATOR action type

--- a/api-domain/src/main/resources/descriptors/view-api.yaml
+++ b/api-domain/src/main/resources/descriptors/view-api.yaml
@@ -1029,6 +1029,7 @@ components:
         - ICON
         - MINI_FAB
         - FAB
+        - SEPARATOR
     UiActionButtonIconPos:
       type: string
       description: |
