[#14257] use list of SubjectTypeDescriptors instead of map, use LangString title

--- a/bff-domain/src/main/resources/descriptors/subjectselector-api.yaml
+++ b/bff-domain/src/main/resources/descriptors/subjectselector-api.yaml
@@ -21,8 +21,9 @@ components:
         selectedDescriptor:
           type: SubjectTypeDescriptor
         descriptors:
-          type: object
           description: The subject descriptors identified by their unique name.
-          additionalProperties:
-           $ref: '#/components/schemas/SubjectTypeDescriptor'      
+          type: array
+          items:
+            $ref: '#/components/schemas/SubjectTypeDescriptor'
+                 
          
