--- a/api-srv-rest/build.gradle
+++ b/api-srv-rest/build.gradle
@@ -27,7 +27,8 @@ smartbit4all {
         	"${rootDir}/api-domain/src/main/resources/descriptors/uitree-api.yaml" : "uitree",
         	"${rootDir}/api-domain/src/main/resources/descriptors/localauthentication-api.yaml" : "localauthentication",
         	"${rootDir}/api-domain/src/main/resources/descriptors/kerberosauthentication-api.yaml" : "kerberosauthentication",
-            "${rootDir}/api-domain/src/main/resources/descriptors/grid-api.yaml" : "grid"
+            "${rootDir}/api-domain/src/main/resources/descriptors/grid-api.yaml" : "grid",
+            "${rootDir}/api-domain/src/main/resources/descriptors/filterexpression-api.yaml" : "filterexpression"
         ]
         apiPackagePrefix = "org.smartbit4all.api"
         apiPackagePostfix = "restserver"
